--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,33 +1,19 @@
 Type: Package
-Package: magrittr
+Package: pipes
 Title: A Forward-Pipe Operator for R
 Version: 1.5.0.9000
 Authors@R: 
-    c(person(given = "Stefan Milton",
-             family = "Bache",
-             role = c("aut", "cre", "cph"),
-             email = "stefan@stefanbache.dk"),
-      person(given = "Hadley",
-             family = "Wickham",
-             role = "aut",
-             email = "hadley@rstudio.com"),
-      person(given = "RStudio",
-             role = c("cph", "fnd")))
-Description: Provides a mechanism for chaining commands with a
-    new forward-pipe operator, %>%. This operator will forward a value, or
-    the result of an expression, into the next function call/expression.
-    There is flexible support for the type of right-hand side expressions.
-    For more information, see package vignette.  To quote Rene Magritte,
-    "Ceci n'est pas un pipe."
+    c(person(given = "Antoine Fabri",
+             family = "Fabri",
+             role = c("aut", "cre"),
+             email = "antoine.fabri@gmail.com"))
+Description: Expands magrittr by providing more pipe operators and a simple way
+    to create custom pipes.
 License: MIT + file LICENSE
 URL: http://magrittr.tidyverse.org,
     https://github.com/tidyverse/magrittr
 BugReports: https://github.com/tidyverse/magrittr/issues
-Suggests: 
-    covr,
-    knitr,
-    rmarkdown,
-    testthat
+imports: magrittr 
 VignetteBuilder: 
     knitr
 ByteCompile: Yes
