--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,27 @@
 S3method("[",fseq)
 S3method("[[",fseq)
 S3method(print,fseq)
-S3method(print,pipe)
 export("%$%")
 export("%<>%")
 export("%>%")
+export("%D>%")
+export("%L>%")
+export("%P>%")
 export("%T>%")
+export("%V>%")
+export("%ae>%")
+export("%compare>%")
+export("%glimpse>%")
+export("%nomsg>%")
+export("%nowarn>%")
+export("%skim>%")
+export("%strict>%")
+export("%summary>%")
+export("%try>%")
 export(debug_fseq)
 export(debug_pipe)
 export(freduce)
 export(functions)
+export(pif)
+export(pprint)
 export(undebug_fseq)
