A working version, with still a lot of broad work to do

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export("%compare>%")
 export("%glimpse>%")
 export("%nomsg>%")
 export("%nowarn>%")
+export("%quietly>%")
 export("%skim>%")
 export("%strict>%")
 export("%summary>%")
@@ -24,6 +25,7 @@ export(debug_fseq)
 export(debug_pipe)
 export(freduce)
 export(functions)
+export(new_pipe)
 export(pif)
 export(pprint)
 export(undebug_fseq)
