--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method("[",fseq)
 S3method("[[",fseq)
 S3method(print,fseq)
+S3method(print,pipe)
 export("%$%")
 export("%<>%")
 export("%>%")
@@ -12,6 +13,7 @@ export("%P>%")
 export("%T>%")
 export("%V>%")
 export("%ae>%")
+export("%auto_browse>%")
 export("%compare>%")
 export("%glimpse>%")
 export("%nomsg>%")
@@ -25,6 +27,7 @@ export(debug_fseq)
 export(debug_pipe)
 export(freduce)
 export(functions)
+export(is_pipe)
 export(new_pipe)
 export(pif)
 export(pprint)
