--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,8 @@ export("%P>%")
 export("%T>%")
 export("%V>%")
 export("%ae>%")
-export("%auto_browse>%")
 export("%compare>%")
+export("%gg>%")
 export("%glimpse>%")
 export("%nomsg>%")
 export("%nowarn>%")
